sass/components/custom.scss
/* ... */
.banner {
  position: relative;
  height: 400px;
  background-color: $tertiary-color;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  color: #FFF;
  .container {
    height: 100%;
    position: relative;
    overflow: hidden;
  }
  h2 {
    font-size: 1.333rem;
    font-family: $font-stack;
    font-weight: 400;
    line-height: 1.5;
    &:last-child {
      margin-bottom: 0;
    }
  }
  &-text.section {
    height: auto;
    padding: 50px 0;
    @media #{$medium-and-up} {
      padding: 62px 0;
    }
    @media #{$large-and-up} {  
      .text-column {
        column-count: 2;
        column-gap: 96px;
      }
    }
    h1, h2, p, a {
      color: #FFF;
      margin-top: 0;
    }
    a {
      text-decoration: underline;
    }
    ul li {
      padding-left: 15px;
      list-style: disc;
      margin-left: 15px;
      color: #FFF;
      font-size: 1.067rem;
    }
  }
  &-center {
    padding: 50px 0;
  }
  .map {
    position: absolute;
    top: 0;
    right: -10%;
    width: 80%;
  }
}

#region-specific-banner {
  overflow: hidden;
}
.banner-text.section {
  .cta-block a {
    text-decoration: none;
  }
  a.breadcrumb {
    text-decoration: none;
  }
}

#index-banner {
  background-attachment: fixed;
}
#highlights-banner {
  background: transparent;
  padding-bottom: 0;
  margin-bottom: 0;
  h1, h2, p, a {
    color: #797979;
  }
}

.filter-btns {
  &.row {
    margin-bottom: 0px;
  }
  a {
    margin: 0 12px 12px 0;
    &.btn-filter {
      box-shadow: none;
      @media #{$large-and-up} {
        margin-top: -12px;
      }
    }
  }
}



.section {
  margin-bottom: 20px;
  padding-top: 0;
  @media #{$medium-and-up} {
    margin-bottom: 40px;
  }
}

.no-margin {
  margin-bottom: 0 !important;
}


.card {
  box-shadow: none;
  &-link {
    display: block;
  }
}

.jigsaw {
  margin-bottom: 0;
  .row {
    margin-bottom: 20px;
    @media #{$large-and-up} {
      margin-bottom: 13px;
    }
    @media #{$extra-large-and-up} {
      margin-bottom: 15px;
    }
    .m12 {
      margin-bottom: 20px;
      &.active {
        .card-content {
          border-color: $tertiary-color;
        }
      }
      .card {
        margin-bottom: 0;
      }
    }
  }
  .card-content {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 3;
    border: 10px solid transparent;
    transition: all .3s ease-in-out;
    &:hover{
      border-color: $tertiary-color;
    }
    .card-title {
      color: $primary-color;
      font-size: 2.533rem;
      position: absolute;
      left: 24px;
      bottom: 28px;
      margin: 0;
      @media #{$extra-large-and-up} {
        left: 34px;
      }
    }
  }
}

.services {
  h3 {
    font-family: $font-stack;
    font-size: .9em;
    color: $primary-color;
  }
  .card-content .card-title {
    margin-bottom: 30px;
  }
}

.countries {
  .row .col.xl2 {
    @media #{$extra-large-and-up} {
      width: 20%;
    }
  }
  .card {
    background: #E1E1E1;
    background-position: center center;
    background-size: cover;
   
      .card-link {
        padding: 120px 0 30px;
      }
    .card-content {
      .card-title {
        margin-bottom: 12px;
        color: $primary-color;
        font-size: 1.2rem;
        line-height: 1.4;
        height: 30px;
         @media #{$extra-large-and-up} {
          font-size: 1.2rem;
         }
      }
      p {
        margin-bottom: 30px;
      }
    }
     &--white {
      .card-content {
        .card-title {
          color: #FFF;
        }
      }
      .btn-transparent {
        color: #FFF;
        border-color: #FFF;
        &:hover, &:active, &:focus {
          border-color: $primary-color;
        }
      }
    }

  }
}

.decked {
  .card-content {
    position: absolute;
    bottom: 10px;
    left: 10px;
    right: 10px;
    background: rgba(250,250,250,.8);
    padding: 10px;
    @media #{$medium-and-up} {
      padding: 20px;
      bottom: 20px;
      left: 20px;
      right: 20px;
    }
    @media #{$large-and-up} {
      padding: 12px;
      bottom: 12px;
      left: 12px;
      right: 12px;
    }
    @media #{$extra-large-and-up} {
      padding: 20px;
      bottom: 20px;
      left: 20px;
      right: 20px;
    }
    p {
      margin-bottom: 10px;
      font-size: 1.067rem;
      line-height: 1.5;
      color: #666;
    }
    .card-more {
      border-bottom: 1px solid $primary-color;
      text-transform: uppercase;
      font-size: 0.9333rem;
    }
    a {
      border-bottom: 1px solid $primary-color;
      text-transform: uppercase;
      font-size: 0.9333rem;
    }
  }
  .card-action {
    border-top: none;
    padding: 12px 0 24px;
    a {
      margin-top: 12px;
      &:first-child {
       margin-right: 12px;
      }
    }
  }
}

.links {
  max-width: 853px;
  margin-left: auto;
  margin-right: auto;
  .row .col:nth-child(3) {  
    @media #{$medium-and-up} {
      border-left: 1px solid #E1E1E1;
      border-right: 1px solid #E1E1E1;
    }
  }
  .s12 {
    @media #{$medium-and-up} {
      margin-bottom: 40px;
    }
  }
  h2 {
    color: $primary-color;
    font-size: 2.533rem;
  }
  &__menu {
    font-size: 1.333rem;
    li {
      margin-bottom: 5px;
      line-height: 1.1;
    }
  }
  .material-icons {
    vertical-align: middle;
  }
}

.quote {
  position: relative;
  margin: 0;
  background: #ddd;
  .row {
    margin:0 auto;
    width: 100%;
  }
  &__text {
    position: relative;
    margin-top: 20px;
    padding: 40px 0 20px;
    @media #{$large-and-up} {
      
    }
    /*
    @media #{$large-and-up} {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;
      margin-top: 0;
    }
    */
  }
  blockquote {
    margin: 0;
    padding: 0;
    border: none;
    font-family: $font-serif;
    font-size: 1.4em;
    font-style: italic;
  }
  .responsive-img {
    width: 100%;
  }
}
/* ... */

